deployment/hello_world/istio-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
spec:
  hosts:
  - "*"
  gateways:
  - uob-tv-api-gateway
  http:
  - match:
    - uri:
        prefix: /hello-world
    route:
    - destination:
        host: hello-world
        port:
          number: 8000
          subset: v1
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-world-destination
spec:
  host: hello-world.prod.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
